Design & typography changes

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="https://hmn.md/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/main.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/frontkit.css">
+    <script type="text/javascript" src="//fast.fonts.net/jsapi/186ccbc7-d35e-49de-86c2-5593561db86d.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
