Move Mapbox key into preview-head

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -6,6 +6,7 @@ window.H2Data = {
 		home: 'http://example.com/',
 		api: 'http://example.com/wp-json/',
 		nonce: 'abcd1234',
+		mapbox_key: '%STORYBOOK_MAPBOX_KEY%' || null,
 	},
 	preload: {},
 	features: {},
